# discord-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  bot.py  config.py  persona.md  pyproject.toml  requirements.txt
.claude/: SESSION_STATE.md  settings.json
.claude/memory/: project-roadmap.md  users.md
.claude/rules/: architecture.md  persona.md  robustness.md  testing.md  workflow.md
.github/workflows/: azure-static-web-apps-brave-ground-0c804e410.yml  cd.yml  ci.yml
dashboard/: index.html
dashboard/css/: styles.css
dashboard/py/: app.py  carousel.py  config.py
docs/: kql_queries.md
insult/: __init__.py  __main__.py  app.py  bot.py  config.py
insult/cogs/: __init__.py  chat.py  utility.py  voice.py
insult/cogs/chat/: __init__.py  batch.py  cog.py  context.py  tasks.py  tools.py  turn.py  voice.py
insult/core/: __init__.py  actions.py  arc_tracker.py  attachments.py  audio.py  backup.py  character.py  debug_server.py  delivery.py  disclosure.py  errors.py  facts.py  flows.py  guild_setup.py  image_summary.py  images.py  language.py  llm.py  memory.py  memory_consolidator.py  metrics.py  patterns.py  presets.py  proactive.py  quality.py  reactions.py  reminders.py  routing.py  stance_log.py  style.py  summaries.py  synthesis_detector.py  transcribe.py  triviality.py  vectors.py  vulnerability.py
insult/core/character/: __init__.py  detection.py  formatting.py  prompts.py  time_context.py
insult/core/flows/: __init__.py  guidance.py  history.py  patterns.py  pipeline.py  prompt.py  types.py  validator.py
insult/core/flows/analyzers/: __init__.py  awareness.py  base.py  epistemic.py  expression.py  pressure.py
insult/core/memory/: __init__.py  base.py  connection.py  context.py  store.py
insult/core/memory/repositories/: __init__.py  channels.py  disclosure.py  facts.py  guild_config.py  messages.py  profiles.py  relational.py  reminders.py  world_scans.py
insult/core/siesta/: __init__.py  state.py
insult/core/siesta/coordination/: __init__.py  blob_metadata.py  poller.py
insult/core/siesta/diary/: __init__.py  generator.py  prompts.py  storage.py
insult/core/siesta/presence/: __init__.py  discord.py
scripts/: kql.sh  sync_capabilities.py
tests/: conftest.py  test_actions.py  test_arc_tracker.py  test_attachments.py  test_audio.py  test_backup_race.py  test_character.py  test_chat_cog.py  test_debug_server.py  test_disclosure.py  test_errors.py  test_facts_persistence.py  test_flows.py  test_guild_setup.py  test_image_summary.py  test_images.py  test_language.py  test_llm_fallback.py  test_medical_web_search.py  test_memory_consolidator.py  test_pipeline_integration.py  test_presets.py  test_presets_clinical.py  test_pricing.py  test_proactive.py  test_quality.py  test_reactions.py  test_reminders.py  test_routing.py  test_siesta_blob_metadata.py  test_siesta_diary.py  test_siesta_presence.py  test_siesta_state.py  test_stance_log.py  test_style.py  test_summaries.py  test_synthesis_detector.py  test_system_blocks.py  test_transcribe.py  test_triviality.py  (+3 more)
